# integracao_sus_ibge

./: .gitignore  README.md  main.py  pyproject.toml  transform_data.py
data/: IDH2010.xls  Lista_Regioes_Planejamento_Ceara.xlsx  mapa_area.csv  mapa_populacao.csv
